# MinkowskiNet

./: .gitignore  CMakeLists.txt  README.md  python_env.sh
MinkowskiNet/: MinkowskiNet.py.in  python_env.sh
MinkowskiNet/MinkowskiEngine/: setup.py
include/: SemanticsUtil.h
src/: SemanticsUtil.cpp  main.cpp
